<resources>
    <string name="app_name">TermLink Manager</string>
    <string-array name="setting_comm_ethernet">
        <item>TCP/IP</item>
        <item>HTTP GET</item>
        <item>SSL/TLS</item>
        <item>HTTPS GET</item>
    </string-array>
    <string-array name="setting_comm_ethernet_client">
        <item>TCP/IP CLIENT</item>
        <item>SSL/TLS CLIENT</item>
    </string-array>
    <string-array name="setting_comm_usb_rate">
        <item>9600</item>
        <item>115200</item>
    </string-array>
    <string-array name="setting_comm_usb_rate_value">
        <item>9600</item>
        <item>115200</item>
    </string-array>
    <string-array name="setting_comm_ethernet_value">
        <item>TCP</item>
        <item>HTTP</item>
        <item>SSL</item>
        <item>HTTPS</item>
    </string-array>

    <string-array name="setting_comm_ethernet_value_client">
        <item>TCP_CLIENT</item>
        <item>SSL_CLIENT</item>
    </string-array>

    <string name="cbpui_trans_total_amount">Total Amount</string>
    <string name="cbpui_trans_total_points">Total Points</string>
    <string name="cbpui_confirm_btn">CONFIRM</string>

    <string name="cancel_sign">Cancel</string>
    <string name="clear_sign">Clear</string>
    <string name="finish_sign">Confirm</string>
    <string name="trans_amount">Amount</string>
    <string name="pls_re_signature">Please Signature Again</string>
    <string name="err_no_trans">No Transaction</string>


    <!--history-->
    <string name="history_total">Total</string>
    <string name="history_detail">Detail</string>
    <string name="history_detail_edc_type">EDC Type</string>
    <string name="history_detail_trans_type">Trans. Type</string>
    <string name="history_detail_card_no">Card NO.</string>
    <string name="history_detail_status">Status</string>
    <string name="history_detail_auth_code">Auth Code</string>
    <string name="history_detail_amount">Amount</string>
    <string name="history_detail_ref_no">Ref. NO.</string>
    <string name="history_detail_card_type">Card Type</string>
    <string name="history_detail_dateTime">Date/Time</string>
    <string name="history_menu_print_trans_last">Print Last</string>
    <string name="history_menu_print_trans_detail">Print Detail</string>
    <string name="history_menu_print_trans_total">Print Summary</string>
    <string name="history_menu_print_last_total">Last Settle</string>
    <string name="history_menu_print_any">Print Any</string>
    <string name="history_search_transno">By TransNo</string>
    <string name="history_search_last4">By Last 4 Digits</string>

    <string name="history_detail_type">Type</string>
    <string name="history_detail_issuer">Card Type</string>
    <string name="history_detail_trace_no">Trace NO.</string>
    <string name="history_detail_state">State</string>
    <string name="history_summary_ref_no">Reference No.:</string>

    <string name="pls_enter_amount">Please Enter Account</string>

    <string name="prompt_date_MMYY" translatable="false">MM/YY</string>
    <string name="prompt_date_MMDD" translatable="false">MM/DD</string>
    <string name="prompt_date_MMDDYY" translatable="false">YYYY/MM/DD</string>
    <string name="prompt_time_HHMMSS" translatable="false">HH:MM:SS</string>
    <string name="prompt_date_MMDDYYYY" translatable="false">MM/DD/YYYY</string>
    <string name="old_pin">Old Password:</string>
    <string name="please_enter_old_pin">Please enter old password</string>
    <string name="new_pin">New Password:</string>
    <string name="please_enter_new_pin">Please enter new password</string>
    <string name="new_pin_again">New Password Again:</string>
    <string name="please_enter_again">Please enter new password again</string>
    <string name="ok">OK</string>
    <string name="device_sn">Device SN:</string>
    <string name="service_version">Service Version:</string>
    <string name="service_name">Service Name:</string>
    <string name="android_version">Android Version:</string>
    <string name="termlink_manager">TermLink Manager</string>
    <string name="enter_old_pwd">Please enter old password.</string>
    <string name="enter_new_pwd">Please enter new password.</string>
    <string name="enter_new_pwd_again">Please enter new password again.</string>
    <string name="new_pwd_different">New passwords do not match.</string>
    <string name="old_password_incorrect">Old passwords incorrect.</string>
    <string name="reset_pwd_ok">Reset Successfully</string>

    <string name="keyboard_enter">Enter</string>
    <string name="keyboard_clear">Clear</string>
    <string name="keyboard_back">Back</string>
    <string name="keyboard_cancel">Cancel</string>
</resources>