<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/trans_detail_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!--app:cardBackgroundColor="@color/trans_detail_header_background_color">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_left_and_right_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trans_edctype_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/history_detail_edc_type"
                android:textSize="@dimen/font_size_smaller" />

            <TextView
                android:id="@+id/trans_transtype_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/history_detail_trans_type"
                android:textSize="@dimen/font_size_smaller" />

            <TextView
                android:id="@+id/trans_amount_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:text="@string/history_detail_amount"
                android:textSize="@dimen/font_size_smaller" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/keyboard_background_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_left_and_right_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trans_cardnum_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/history_detail_card_no"
                android:textSize="@dimen/font_size_smaller" />

            <TextView
                android:id="@+id/trans_cardtype_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:text="@string/history_detail_card_type"
                android:textSize="@dimen/font_size_smaller" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_left_and_right_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trans_status_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/history_detail_status"
                android:textSize="@dimen/font_size_smaller" />

            <TextView
                android:id="@+id/trans_date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:text="@string/history_detail_dateTime"
                android:textSize="@dimen/font_size_smaller" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>