<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/old_pin"
                android:textColor="@color/prompt_text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_old_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edit_frame"
                android:hint="@string/please_enter_old_pin"
                android:inputType="numberPassword"
                android:padding="10dp"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@color/cbpui_gray_text"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/new_pin"
                android:textColor="@color/prompt_text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_new_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edit_frame"
                android:hint="@string/please_enter_new_pin"
                android:inputType="numberPassword"
                android:padding="10dp"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@color/cbpui_gray_text"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/new_pin_again"
                android:textColor="@color/prompt_text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_new_pin_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edit_frame"
                android:hint="@string/please_enter_again"
                android:inputType="numberPassword"
                android:padding="10dp"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@color/cbpui_gray_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/red"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_button"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
    <include
        layout="@layout/pax_layout_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>